# app/Filament/Resources/GameMatches/GameMatchResource.php
@@ -12,6 +12,7 @@ use Filament\Resources\Resource;
 use Filament\Schemas\Schema;
 use Filament\Support\Icons\Heroicon;
 use Filament\Tables\Table;
+use Illuminate\Database\Eloquent\Builder;
 
 class GameMatchResource extends Resource
 {
@@ -35,6 +36,12 @@ class GameMatchResource extends Resource
     public static function table(Table $table): Table
     {
         return GameMatchesTable::configure($table);
+    }
+
+    public static function getEloquentQuery(): Builder
+    {
+        return parent::getEloquentQuery()
+            ->with(['gameType', 'gameFormat']);
     }
 
     public static function getRelations(): array
