# app/Http/Requests/Api/StoreMatchRequest.php
@@ -3,6 +3,7 @@
 namespace App\Http\Requests\Api;
 
 use App\Data\Matches\StoreMatchData;
+use App\Models\Dictionary\Game\GameFormatType;
 use App\Models\Dictionary\Game\GameType;
 use Illuminate\Contracts\Validation\ValidationRule;
 use Illuminate\Foundation\Http\FormRequest;
@@ -11,9 +12,10 @@ use OpenApi\Attributes as OA;
 
 #[OA\Schema(
     schema: 'ApiStoreMatchRequest',
-    required: ['game_type_id'],
+    required: ['game_type_id', 'game_format_id'],
     properties: [
         new OA\Property(property: 'game_type_id', type: 'integer', example: 1),
+        new OA\Property(property: 'game_format_id', type: 'integer', example: 2),
     ],
     type: 'object',
 )]
@@ -36,10 +38,28 @@ class StoreMatchRequest extends FormRequest
     {
         return [
             'game_type_id' => [
+                'bail',
                 'required',
                 'integer',
                 Rule::exists(GameType::class, 'id'),
             ],
+            'game_format_id' => [
+                'bail',
+                'required',
+                'integer',
+                Rule::exists(GameFormatType::class, 'game_format_id')
+                    ->where('game_type_id', $this->integer('game_type_id')),
+            ],
+        ];
+    }
+
+    /**
+     * @return array<string, string>
+     */
+    public function messages(): array
+    {
+        return [
+            'game_format_id.exists' => 'The selected game format is invalid for the provided game type.',
         ];
     }
 
