# app/Models/GameMatch.php
@@ -2,6 +2,7 @@
 
 namespace App\Models;
 
+use App\Models\Dictionary\Game\GameFormat;
 use App\Models\Dictionary\Game\GameType;
 use Database\Factories\GameMatchFactory;
 use Illuminate\Database\Eloquent\Attributes\Guarded;
@@ -13,10 +14,12 @@ use Illuminate\Support\Carbon;
 /**
  * @property int $id
  * @property int $game_type_id
+ * @property int $game_format_id
  * @property Carbon $created_at
  * @property Carbon|null $finished_at
  * @property int|null $duration
  * @property GameType $gameType
+ * @property GameFormat $gameFormat
  */
 #[Guarded([])]
 class GameMatch extends Model
@@ -45,5 +48,10 @@ class GameMatch extends Model
     public function gameType(): BelongsTo
     {
         return $this->belongsTo(GameType::class);
+    }
+
+    public function gameFormat(): BelongsTo
+    {
+        return $this->belongsTo(GameFormat::class);
     }
 }
